--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Learn to AlpineJs</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div x-data="{nama : 'Abdullah Muchsin'}" >
+        <div x-data="{umur : 20}">
+            <p>Nama : <span x-text="nama"></span></p>
+            <p>Umur : <span x-text="umur"></span></p>
+        </div>
+    </div>
   </body>
 </html>
