--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
     <title>Learn to AlpineJs</title>
   </head>
   <body>
-    <div x-data="{nama : 'Abdullah Muchsin'}" >
-        <div x-data="{umur : 20}">
-            <p>Nama : <span x-text="nama"></span></p>
-            <p>Umur : <span x-text="umur"></span></p>
-        </div>
+    <div x-data="{nama : 'Abdullah Muchsin'}">
+      <div x-data="{umur : 20}">
+        <p>Nama : <span x-text="nama"></span></p>
+        <p>Umur : <span x-text="umur"></span></p>
+      </div>
     </div>
+
+    <div x-data>
+      <ul>
+        <template x-for="nm in $store.mahasiswa.nama">
+          <li x-text="nm"></li>
+        </template>
+      </ul>
+    </div>
+
+    <script>
+      document.addEventListener("alpine:init", () => {
+        Alpine.store("mahasiswa", {
+          tahun: 2023,
+          nama: ["Muchsin", "Wafa", "Ali"],
+        });
+      });
+    </script>
   </body>
 </html>
