--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       </ul>
     </div>
 
+    <button x-data @click="confirm('Terima kasih sudah diklik');">Klik Saya</button>
+
     <script>
       document.addEventListener("alpine:init", () => {
         Alpine.store("mahasiswa", {
