--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <button x-data @click="confirm('Terima kasih sudah diklik');">Klik Saya</button> -->
 
     <div
+      x-data="{nama : 'Abdullah Muchsin'}"
       class="container mx-auto w-1/2 text-center mt-10 bg-lime-200 p-10 rounded-xl shadow"
     >
       <h1
         class="text-5xl font-bold bg-gradient-to-r from-blue-500 to-pink-400 bg-clip-text text-transparent drop-shadow-sm"
-        x-data="{nama : 'Hallo, Abdullah Muchsin'}"
-        x-text="nama"
       >
+        Halo <span x-text="nama"></span>
       </h1>
     </div>
 
