--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1
         class="text-3xl font-bold bg-gradient-to-r from-blue-500 to-pink-400 bg-clip-text text-transparent drop-shadow-sm"
       >
-      Halo <span x-text="link"></span>
+      Halo <span x-html="link"></span>
       </h1>
     </div>
 
