--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </h1>
     </div> -->
     <!-- <div
-      x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>' }"
+      x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>'}"
       class="container mx-auto w-1/2 text-center mt-10 bg-lime-200 p-10 rounded-xl shadow"
     >
       <h1
@@ -56,17 +56,15 @@
       </h1>
     </div> -->
     <div
-      x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>' }"
+      x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>', open:false }"
       class="container mx-auto w-1/2 text-center mt-10 bg-lime-200 p-10 rounded-xl shadow"
     >
-  
-    <button class="py-2 px-5 bg-slate-500 text-white rounded-md">Buka</button>
+      <button @click="open = !open" class="py-2 px-5 bg-slate-500 text-white rounded-md">Buka</button>
 
-    <div class="w-3/4 mx-auto mt-4 p-5 bg-blue-400 rounded text-white">
-      Lorem ipsum dolor sit amet.
+      <div x-show="open" class="w-3/4 mx-auto mt-4 p-5 bg-blue-400 rounded text-white">
+        Lorem ipsum dolor sit amet.
+      </div>
     </div>
-
-  </div>
 
     <script>
       document.addEventListener("alpine:init", () => {
