--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
       <label class="text-sm font-medium text-gray-900 block mb-2"
         >Masukkan Teks</label
       >
-      <input type="text" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+      <input type="text" 
+      @keyup.enter="alert('Kolom sudah diisi!')"
+      class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
     </div>
 
     <script>
