--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
 
     <div
       x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>', open:false }"
+      @log="alert('event buatan ini, di klik oleh ' + $event.detail.nama)"
       class="container mx-auto w-1/2 text-center mt-10 bg-pink-200 p-10 rounded-xl shadow"
     >
       <button
-        x-on:click="ubahWarna"
+        x-on:click="$dispatch('log', { nama: 'Someone' })"
         class="py-2 px-5 text-white rounded-md bg-blue-400"
       >
         Klik Saya
@@ -118,7 +119,7 @@
       });
 
       function ubahWarna(e) {
-        e.target.classList.add('bg-violet-500');
+        e.target.classList.add("bg-violet-500");
       }
     </script>
   </body>
