--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </template> -->
     </div>
 
-    <div
+    <!-- <div
       x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>', open:false }"
       @log="alert('event buatan ini, di klik oleh ' + $event.detail.nama)"
       class="container mx-auto w-1/2 text-center mt-10 bg-pink-200 p-10 rounded-xl shadow"
@@ -96,19 +96,28 @@
       >
         Klik Saya
       </button>
-    </div>
+    </div> -->
 
-    <!-- <div
+    <div
       x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>', open:false }"
       class="container mx-auto w-3/4 text-center mt-10 bg-pink-200 p-10 rounded-xl shadow"
     >
-      <label class="text-sm font-medium text-gray-900 block mb-2"
-        >Masukkan Teks</label
-      >
-      <input type="text" 
-      @keyup.enter.shift="alert('Kolom sudah diisi!')"
-      class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-    </div> -->
+      <form action="/post-data" @submit.prevent="alert('Data berhasil dikirim!')">
+        <label class="text-sm font-medium text-gray-900 block mb-2"
+          >Masukkan Teks</label
+        >
+        <input
+          type="text"
+          @keyup.enter.shift="alert('Kolom sudah diisi!')"
+          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        />
+        <button
+        type="submit"
+        class="py-2 px-5 text-white rounded-md bg-slate-400 mt-3"
+      >Kirim</button>
+
+      </form>
+    </div>
 
     <script>
       document.addEventListener("alpine:init", () => {
