--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div> -->
     <div
       x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>', open:false }"
-      @keyup.slash.window="open = false"      
+      @keyup.slash.window="open = false"
       class="container mx-auto w-1/2 text-center mt-10 bg-lime-200 p-10 rounded-xl shadow"
     >
       <button
@@ -99,7 +99,7 @@
       </button>
     </div> -->
 
-    <div
+    <!-- <div
       @click="alert('Div ditekan')"
       x-data="{nama : 'Abdullah Muchsin', number:3, link:'<a href=\'https://github.com/AbdullahMuchsin\'>Abdullah Muchsin</a>', open:false }"
       class="container mx-auto w-3/4 text-center mt-10 bg-pink-200 p-10 rounded-xl shadow"
@@ -122,6 +122,88 @@
         >
           Kirim
         </button>
+      </form>
+    </div> -->
+
+    <div
+      x-data="{ pesan: '', open: false, hobi: { menulis: false, coding: false, membaca: false } }"
+      class="container mx-auto w-3/4 text-center mt-10 bg-pink-200 p-10 rounded-xl shadow"
+    >
+      <form
+        action="/post-data"
+        @submit.prevent="alert('Data berhasil dikirim!')"
+      >
+        <label class="text-sm font-medium text-gray-900 block mb-2"
+          >Masukkan Teks</label
+        >
+        <input
+          type="text"
+          x-model="pesan"
+          class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+        />
+        <div
+          x-text="pesan.length + '/' + '20'"
+          x-bind:class="pesan.length > 20 ? 'text-red-500' : 'text-green-700'"
+          class="mb-2 inline-block text-green-600 font-bold"
+        ></div>
+        <button
+          @click.stop="alert('Button ditekan')"
+          class="py-2 px-5 text-white rounded-md bg-slate-400 mt-3"
+        >
+          Kirim
+        </button>
+
+        <div class="flex items-center mt-3">
+          <input
+            type="checkbox"
+            name="open"
+            id="open"
+            x-model="open"
+            class="mr-2"
+          />
+          <label for="open" x-text="open ? 'Diisi' : 'Belum Diisi'"></label>
+        </div>
+
+        <div class="flex flex-col items-start mt-4">
+          <h3 class="mb-4">Pilih Hobi</h3>
+          <div class="flex items-center mb-2">
+            <input
+              type="checkbox"
+              name="menulis"
+              id="menulis"
+              x-model="hobi.menulis"
+              class="mr-2"
+            />
+            <label for="menulis">Menulis</label>
+          </div>
+          <div class="flex items-center mb-2">
+            <input
+              type="checkbox"
+              name="coding"
+              id="coding"
+              x-model="hobi.coding"
+              class="mr-2"
+            />
+            <label for="coding">Coding</label>
+          </div>
+          <div class="flex items-center mb-2">
+            <input
+              type="checkbox"
+              name="membaca"
+              id="membaca"
+              x-model="hobi.membaca"
+              class="mr-2"
+            />
+            <label for="membaca">Membaca</label>
+          </div>
+
+          <p class="my-2">
+            Hobi:
+            <span
+              x-text="Object.keys(hobi).filter(key => hobi[key]).join(', ')"
+            ></span>
+          </p>
+        </div>
       </form>
     </div>
 
